--- a/css/global.css
+++ b/css/global.css
@@ -1,5 +1,4 @@
 /*! normalize.css v3.0.1 | MIT License | git.io/normalize */
-@import url("../fonts/stylesheet.css");
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
@@ -879,7 +878,7 @@ html {
   -webkit-tap-highlight-color: transparent; }
 
 body {
-  font-family: geoslab703_md_btmedium, Georgia, "Times New Roman", Times, serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 17px;
   line-height: 1.42857;
   color: #36312e;
@@ -1042,7 +1041,7 @@ p {
   font-size: 19px;
   font-weight: 300;
   line-height: 1.4; }
-  @media (min-width: 1px) {
+  @media (min-width: 768px) {
     .lead {
       font-size: 25.5px; } }
 
@@ -1193,7 +1192,7 @@ dd {
   display: table; }
 .dl-horizontal dd:after {
   clear: both; }
-@media (min-width: 1px) {
+@media (min-width: 768px) {
   .dl-horizontal dt {
     float: left;
     width: 160px;
@@ -1325,15 +1324,15 @@ pre {
     display: table; }
   .container:after {
     clear: both; }
-  @media (min-width: 1px) {
+  @media (min-width: 768px) {
     .container {
-      width: 1200px; } }
-  @media (min-width: 1px) {
+      width: 750px; } }
+  @media (min-width: 992px) {
     .container {
-      width: 1200px; } }
-  @media (min-width: 1px) {
+      width: 970px; } }
+  @media (min-width: 1200px) {
     .container {
-      width: 1200px; } }
+      width: 1170px; } }
 
 .container-fluid {
   margin-right: auto;
@@ -1517,7 +1516,7 @@ pre {
 .col-xs-offset-12 {
   margin-left: 100%; }
 
-@media (min-width: 1px) {
+@media (min-width: 768px) {
   .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
     float: left; }
 
@@ -1673,7 +1672,7 @@ pre {
 
   .col-sm-offset-12 {
     margin-left: 100%; } }
-@media (min-width: 1px) {
+@media (min-width: 992px) {
   .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
     float: left; }
 
@@ -1829,7 +1828,7 @@ pre {
 
   .col-md-offset-12 {
     margin-left: 100%; } }
-@media (min-width: 1px) {
+@media (min-width: 1200px) {
   .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
     float: left; }
 
@@ -2140,7 +2139,7 @@ table th[class*="col-"] {
 .table-hover > tbody > tr > th.danger:hover, .table-hover > tbody > tr.danger:hover > td, .table-hover > tbody > tr:hover > .danger, .table-hover > tbody > tr.danger:hover > th {
   background-color: #ebcccc; }
 
-@media screen and (max-width: 0px) {
+@media screen and (max-width: 767px) {
   .table-responsive {
     width: 100%;
     margin-bottom: 18px;
@@ -2550,7 +2549,7 @@ select[multiple].input-lg,
   margin-bottom: 10px;
   color: #7b6f69; }
 
-@media (min-width: 1px) {
+@media (min-width: 768px) {
   .form-inline .form-group, .navbar-form .form-group {
     display: inline-block;
     margin-bottom: 0;
@@ -2610,7 +2609,7 @@ select[multiple].input-lg,
     display: table; }
   .form-horizontal .form-group:after {
     clear: both; }
-@media (min-width: 1px) {
+@media (min-width: 768px) {
   .form-horizontal .control-label {
     text-align: right;
     margin-bottom: 0;
@@ -2618,10 +2617,10 @@ select[multiple].input-lg,
 .form-horizontal .has-feedback .form-control-feedback {
   top: 0;
   right: 15px; }
-@media (min-width: 1px) {
+@media (min-width: 768px) {
   .form-horizontal .form-group-lg .control-label {
     padding-top: 14.3px; } }
-@media (min-width: 1px) {
+@media (min-width: 768px) {
   .form-horizontal .form-group-sm .control-label {
     padding-top: 6px; } }
 
@@ -2959,7 +2958,7 @@ tbody.collapse.in {
   bottom: 100%;
   margin-bottom: 1px; }
 
-@media (min-width: 1px) {
+@media (min-width: 768px) {
   .navbar-right .dropdown-menu {
     right: 0;
     left: auto; }
@@ -3311,7 +3310,7 @@ tbody.collapse.in {
   .nav-justified > .dropdown .dropdown-menu {
     top: auto;
     left: auto; }
-  @media (min-width: 1px) {
+  @media (min-width: 768px) {
     .nav-justified > li, .nav-tabs.nav-justified > li {
       display: table-cell;
       width: 1%; }
@@ -3329,7 +3328,7 @@ tbody.collapse.in {
   .nav-tabs-justified > .active > a:focus,
   .nav-tabs.nav-justified > .active > a:focus {
     border: 1px solid #dddddd; }
-  @media (min-width: 1px) {
+  @media (min-width: 768px) {
     .nav-tabs-justified > li > a, .nav-tabs.nav-justified > li > a {
       border-bottom: 1px solid #dddddd;
       border-radius: 3px 3px 0 0; }
@@ -3360,7 +3359,7 @@ tbody.collapse.in {
     display: table; }
   .navbar:after {
     clear: both; }
-  @media (min-width: 1px) {
+  @media (min-width: 768px) {
     .navbar {
       border-radius: 3px; } }
 
@@ -3369,7 +3368,7 @@ tbody.collapse.in {
   display: table; }
 .navbar-header:after {
   clear: both; }
-@media (min-width: 1px) {
+@media (min-width: 768px) {
   .navbar-header {
     float: left; } }
 
@@ -3387,7 +3386,7 @@ tbody.collapse.in {
     clear: both; }
   .navbar-collapse.in {
     overflow-y: auto; }
-  @media (min-width: 1px) {
+  @media (min-width: 768px) {
     .navbar-collapse {
       width: auto;
       border-top: 0;
@@ -3406,7 +3405,7 @@ tbody.collapse.in {
 .navbar-fixed-top .navbar-collapse,
 .navbar-fixed-bottom .navbar-collapse {
   max-height: 340px; }
-  @media (max-width: 0) and (orientation: landscape) {
+  @media (max-width: 480px) and (orientation: landscape) {
     .navbar-fixed-top .navbar-collapse,
     .navbar-fixed-bottom .navbar-collapse {
       max-height: 200px; } }
@@ -3417,7 +3416,7 @@ tbody.collapse.in {
 .container-fluid > .navbar-collapse {
   margin-right: -15px;
   margin-left: -15px; }
-  @media (min-width: 1px) {
+  @media (min-width: 768px) {
     .container > .navbar-header,
     .container > .navbar-collapse,
     .container-fluid > .navbar-header,
@@ -3428,7 +3427,7 @@ tbody.collapse.in {
 .navbar-static-top {
   z-index: 1000;
   border-width: 0 0 1px; }
-  @media (min-width: 1px) {
+  @media (min-width: 768px) {
     .navbar-static-top {
       border-radius: 0; } }
 
@@ -3440,7 +3439,7 @@ tbody.collapse.in {
   z-index: 1030;
   -webkit-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0); }
-  @media (min-width: 1px) {
+  @media (min-width: 768px) {
     .navbar-fixed-top,
     .navbar-fixed-bottom {
       border-radius: 0; } }
@@ -3462,7 +3461,7 @@ tbody.collapse.in {
   height: 50px; }
   .navbar-brand:hover, .navbar-brand:focus {
     text-decoration: none; }
-  @media (min-width: 1px) {
+  @media (min-width: 768px) {
     .navbar > .container .navbar-brand, .navbar > .container-fluid .navbar-brand {
       margin-left: -15px; } }
 
@@ -3486,7 +3485,7 @@ tbody.collapse.in {
     border-radius: 1px; }
   .navbar-toggle .icon-bar + .icon-bar {
     margin-top: 4px; }
-  @media (min-width: 1px) {
+  @media (min-width: 768px) {
     .navbar-toggle {
       display: none; } }
 
@@ -3496,7 +3495,7 @@ tbody.collapse.in {
     padding-top: 10px;
     padding-bottom: 10px;
     line-height: 24px; }
-  @media (max-width: 0px) {
+  @media (max-width: 767px) {
     .navbar-nav .open .dropdown-menu {
       position: static;
       float: none;
@@ -3512,7 +3511,7 @@ tbody.collapse.in {
         line-height: 24px; }
         .navbar-nav .open .dropdown-menu > li > a:hover, .navbar-nav .open .dropdown-menu > li > a:focus {
           background-image: none; } }
-  @media (min-width: 1px) {
+  @media (min-width: 768px) {
     .navbar-nav {
       float: left;
       margin: 0; }
@@ -3524,7 +3523,7 @@ tbody.collapse.in {
       .navbar-nav.navbar-right:last-child {
         margin-right: -15px; } }
 
-@media (min-width: 1px) {
+@media (min-width: 768px) {
   .navbar-left {
     float: left !important; }
 
@@ -3540,10 +3539,10 @@ tbody.collapse.in {
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.1);
   margin-top: 6px;
   margin-bottom: 6px; }
-  @media (max-width: 0px) {
+  @media (max-width: 767px) {
     .navbar-form .form-group {
       margin-bottom: 5px; } }
-  @media (min-width: 1px) {
+  @media (min-width: 768px) {
     .navbar-form {
       width: auto;
       border: 0;
@@ -3578,7 +3577,7 @@ tbody.collapse.in {
 .navbar-text {
   margin-top: 13px;
   margin-bottom: 13px; }
-  @media (min-width: 1px) {
+  @media (min-width: 768px) {
     .navbar-text {
       float: left;
       margin-left: 15px;
@@ -3619,7 +3618,7 @@ tbody.collapse.in {
   .navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
     background-color: #e7e7e7;
     color: #555555; }
-  @media (max-width: 0px) {
+  @media (max-width: 767px) {
     .navbar-default .navbar-nav .open .dropdown-menu > li > a {
       color: #777777; }
       .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
@@ -3675,7 +3674,7 @@ tbody.collapse.in {
   .navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .open > a:hover, .navbar-inverse .navbar-nav > .open > a:focus {
     background-color: #090909;
     color: white; }
-  @media (max-width: 0px) {
+  @media (max-width: 767px) {
     .navbar-inverse .navbar-nav .open .dropdown-menu > .dropdown-header {
       border-color: #090909; }
     .navbar-inverse .navbar-nav .open .dropdown-menu .divider {
@@ -3935,7 +3934,7 @@ a.badge:hover, a.badge:focus {
     border-radius: 6px; }
   .jumbotron .container {
     max-width: 100%; }
-  @media screen and (min-width: 1px) {
+  @media screen and (min-width: 768px) {
     .jumbotron {
       padding-top: 48px;
       padding-bottom: 48px; }
@@ -4706,7 +4705,7 @@ button.close {
   height: 50px;
   overflow: scroll; }
 
-@media (min-width: 1px) {
+@media (min-width: 768px) {
   .modal-dialog {
     width: 600px;
     margin: 30px auto; }
@@ -4717,7 +4716,7 @@ button.close {
 
   .modal-sm {
     width: 300px; } }
-@media (min-width: 1px) {
+@media (min-width: 992px) {
   .modal-lg {
     width: 900px; } }
 .tooltip {
@@ -5056,7 +5055,7 @@ button.close {
   .carousel-caption .btn {
     text-shadow: none; }
 
-@media screen and (min-width: 1px) {
+@media screen and (min-width: 768px) {
   .carousel-control .glyphicon-chevron-left,
   .carousel-control .glyphicon-chevron-right,
   .carousel-control .icon-prev,
@@ -5140,7 +5139,7 @@ button.close {
 .visible-lg-inline-block {
   display: none !important; }
 
-@media (max-width: 0px) {
+@media (max-width: 767px) {
   .visible-xs {
     display: block !important; }
 
@@ -5153,19 +5152,19 @@ button.close {
   th.visible-xs,
   td.visible-xs {
     display: table-cell !important; } }
-@media (max-width: 0px) {
+@media (max-width: 767px) {
   .visible-xs-block {
     display: block !important; } }
 
-@media (max-width: 0px) {
+@media (max-width: 767px) {
   .visible-xs-inline {
     display: inline !important; } }
 
-@media (max-width: 0px) {
+@media (max-width: 767px) {
   .visible-xs-inline-block {
     display: inline-block !important; } }
 
-@media (min-width: 1px) and (max-width: 0px) {
+@media (min-width: 768px) and (max-width: 991px) {
   .visible-sm {
     display: block !important; }
 
@@ -5178,19 +5177,19 @@ button.close {
   th.visible-sm,
   td.visible-sm {
     display: table-cell !important; } }
-@media (min-width: 1px) and (max-width: 0px) {
+@media (min-width: 768px) and (max-width: 991px) {
   .visible-sm-block {
     display: block !important; } }
 
-@media (min-width: 1px) and (max-width: 0px) {
+@media (min-width: 768px) and (max-width: 991px) {
   .visible-sm-inline {
     display: inline !important; } }
 
-@media (min-width: 1px) and (max-width: 0px) {
+@media (min-width: 768px) and (max-width: 991px) {
   .visible-sm-inline-block {
     display: inline-block !important; } }
 
-@media (min-width: 1px) and (max-width: 0px) {
+@media (min-width: 992px) and (max-width: 1199px) {
   .visible-md {
     display: block !important; }
 
@@ -5203,19 +5202,19 @@ button.close {
   th.visible-md,
   td.visible-md {
     display: table-cell !important; } }
-@media (min-width: 1px) and (max-width: 0px) {
+@media (min-width: 992px) and (max-width: 1199px) {
   .visible-md-block {
     display: block !important; } }
 
-@media (min-width: 1px) and (max-width: 0px) {
+@media (min-width: 992px) and (max-width: 1199px) {
   .visible-md-inline {
     display: inline !important; } }
 
-@media (min-width: 1px) and (max-width: 0px) {
+@media (min-width: 992px) and (max-width: 1199px) {
   .visible-md-inline-block {
     display: inline-block !important; } }
 
-@media (min-width: 1px) {
+@media (min-width: 1200px) {
   .visible-lg {
     display: block !important; }
 
@@ -5228,28 +5227,28 @@ button.close {
   th.visible-lg,
   td.visible-lg {
     display: table-cell !important; } }
-@media (min-width: 1px) {
+@media (min-width: 1200px) {
   .visible-lg-block {
     display: block !important; } }
 
-@media (min-width: 1px) {
+@media (min-width: 1200px) {
   .visible-lg-inline {
     display: inline !important; } }
 
-@media (min-width: 1px) {
+@media (min-width: 1200px) {
   .visible-lg-inline-block {
     display: inline-block !important; } }
 
-@media (max-width: 0px) {
+@media (max-width: 767px) {
   .hidden-xs {
     display: none !important; } }
-@media (min-width: 1px) and (max-width: 0px) {
+@media (min-width: 768px) and (max-width: 991px) {
   .hidden-sm {
     display: none !important; } }
-@media (min-width: 1px) and (max-width: 0px) {
+@media (min-width: 992px) and (max-width: 1199px) {
   .hidden-md {
     display: none !important; } }
-@media (min-width: 1px) {
+@media (min-width: 1200px) {
   .hidden-lg {
     display: none !important; } }
 .visible-print {
@@ -5364,14 +5363,14 @@ body {
   margin-right: -15px;
   padding-left: 15px;
   padding-right: 15px; }
-  @media (min-width: 1px) {
+  @media (min-width: 768px) {
     .navbar .logo {
       margin-right: 0;
       padding-left: 0; } }
 
 ul.secondary {
   float: left; }
-  @media (min-width: 1px) {
+  @media (min-width: 768px) {
     ul.secondary {
       float: right; } }
 
@@ -5396,7 +5395,7 @@ form#search-block-form {
 .navbar #block-search-form {
   float: none;
   margin: 5px 0 5px 5px; }
-  @media (min-width: 1px) {
+  @media (min-width: 992px) {
     .navbar #block-search-form {
       float: right; } }
 
@@ -5717,7 +5716,7 @@ table .checkbox input[type="checkbox"] {
   padding-left: 15px;
   padding-right: 15px;
   text-align: right; }
-  @media (min-width: 1px) {
+  @media (min-width: 768px) {
     .form-horizontal .form-group label {
       float: left;
       width: 16.66667%; } }
@@ -5747,76 +5746,161 @@ table .checkbox input[type="checkbox"] {
   font-size: 16px;
   font-weight: bold; }
 
-h1, .h1,
-h2, .h2,
-h3, .h3,
-h4, .h4,
-h5, .h5,
-h6, .h6,
-p,
-ul,
-ol {
-  margin-bottom: 24px; }
+h1, h2, h3 {
+  font-family: 'Open Sans Condensed', sans-serif;
+  font-weight: 700; }
 
-blockquote {
-  padding: 24px; }
+h4 {
+  font-family: 'Open Sans Condensed', sans-serif;
+  font-weight: 400;
+  margin-bottom: 0; }
 
-pre {
-  margin-bottom: 24px;
-  padding: 23px; }
-
-.node .field-name-body ul {
-  list-style-type: none;
-  margin-left: 0;
-  padding-left: 0; }
-  .node .field-name-body ul li {
-    background-image: url(../img/bullet.png);
-    background-position: 0 0.4em;
-    background-repeat: no-repeat;
-    font-family: geoslab703_md_btbold, Georgia, "Times New Roman", Times, serif;
-    padding-left: 17px; }
-
-strong,
-b {
-  font-family: geoslab703_md_btbold, Georgia, "Times New Roman", Times, serif;
-  font-weight: normal; }
-
-html,
-body {
-  height: 100%; }
-
-.wrap {
-  margin-bottom: -102px;
-  min-height: 100%;
-  height: auto !important;
-  height: 100%; }
-
-footer.footer {
-  margin-top: 0;
-  padding: 0; }
-
-footer.footer .container,
-.push {
-  height: 102px; }
-
-body.admin-menu {
-  margin-top: 29px !important; }
-
-.modal-body {
-  overflow: auto;
-  padding: 1em 1em 0 1em; }
-
-.form-control {
-  box-shadow: none; }
-
-#header {
-  border-bottom: 1px solid #dbdbdb;
+.overlay {
   position: relative;
-  z-index: 2; }
+  z-index: 10; }
 
-.region-header {
+img {
+  max-width: 100%; }
+
+body {
+  background: #fff; }
+
+.intro {
+  font-size: 18px; }
+
+header {
+  background: #000000;
+  xbackground: #0086c5;
+  padding: 0 0 60px 0;
+  text-align: center;
+  margin-bottom: 40px; }
+
+.news {
+  border-top: 1px solid #ccc;
+  list-style: none;
+  margin: 20px 0 20px 0;
+  padding: 20px 0 0 0; }
+
+.news li {
+  margin-bottom: 5px; }
+
+.community {
+  background: #f0f0f0;
+  margin: 40px 0 0 0;
+  padding: 20px 0; }
+
+.community h3 {
+  font-family: 'Open Sans Condensed', sans-serif;
+  font-weight: 700; }
+
+.tagline {
+  font-family: 'Open Sans Condensed', sans-serif;
+  font-size: 36px;
+  font-style: italic;
+  text-align: center;
+  padding: 20px; }
+
+.supporters {
+  margin: 40px 0; }
+
+.footer {
+  line-height: 22px;
+  background: #222;
+  color: white;
+  padding: 20px; }
+
+header {
+  position: relative;
+  overflow: hidden; }
+
+.vspace {
+  margin: 20px 0; }
+
+.showcase a {
+  display: block;
+  margin: 10px 0; }
+
+.csep {
+  border-top: 1px solid #ddd;
+  margin: 40px 0;
+  padding: 40px 0; }
+
+.dries {
+  margin-bottom: 20px; }
+
+.badge {
+  margin-right: 1em; }
+
+@-webkit-keyframes -webkit-rotating-earth {
+  100% {
+    -webkit-transform: rotate(72deg); } }
+header h1 {
+  color: white;
+  font-size: 42px;
+  margin: 40px 0 20px 0;
+  text-shadow: 5px 5px 5px #000; }
+
+.masthead {
+  position: relative;
+  z-index: 100; }
+
+.masthead-nav {
   float: right;
-  height: 82px; }
-  .region-header .block {
-    float: left;
-    padding-left: 30px; }
+  margin: 20px 0 40px 0; }
+
+.masthead-brand {
+  float: left;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-size: 16px;
+  font-weight: bold; }
+
+.region-header-right {
+  float: right;
+  margin: 20px 0 40px 0; }
+
+.hero .btn {
+  margin: 20px 0; }
+.hero .earth {
+  position: absolute;
+  top: 40px;
+  left: 50%;
+  margin-left: -967px;
+  -webkit-animation: -webkit-rotating-earth 120s infinite normal linear;
+  max-width: none; }
+
+#block-delta-blocks-logo {
+  float: left;
+  margin-right: 20px; }
+  #block-delta-blocks-logo img {
+    width: 50px; }
+
+#block-system-main-menu .nav > li {
+  display: inline-block; }
+  #block-system-main-menu .nav > li + li {
+    margin-left: 20px; }
+  #block-system-main-menu .nav > li > a {
+    padding-right: 0;
+    padding-left: 0;
+    font-size: 16px;
+    font-weight: bold;
+    color: #fff;
+    /* IE8 proofing */
+    color: rgba(255, 255, 255, 0.75);
+    border-bottom: 2px solid transparent; }
+    #block-system-main-menu .nav > li > a:hover, #block-system-main-menu .nav > li > a:focus {
+      background-color: transparent;
+      border-bottom-color: rgba(255, 255, 255, 0.25); }
+  #block-system-main-menu .nav > li.active > a, #block-system-main-menu .nav > li.active > a:hover, #block-system-main-menu .nav > li.active > a:focus {
+    color: #fff;
+    border-bottom-color: #fff; }
+
+#block-delta-blocks-site-name {
+  float: left; }
+  #block-delta-blocks-site-name h2 {
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 16px; }
+  #block-delta-blocks-site-name a {
+    color: white; }
+    #block-delta-blocks-site-name a:hover {
+      text-decoration: none; }
