--- a/sass/includes/10-header/00-general.scss
+++ b/sass/includes/10-header/00-general.scss
@@ -1,19 +1,35 @@
 
 
+
 @if $file == global {
-  #header {
-    border-bottom: 1px solid #dbdbdb;
-    position: relative;
-    z-index: 2;
+  header {
+    h1 {
+      color: white;
+      font-size: 42px;
+      margin: 40px 0 20px 0;
+      text-shadow: 5px 5px 5px #000;
+    }
   }
 
-  .region-header {
+  .masthead {
+    position: relative;
+    z-index: 100;
+  }
+  .masthead-nav {
     float: right;
-    height: 82px;
+    margin: 20px 0 40px 0;
+  }
 
-    .block {
-      float: left;
-      padding-left: 30px;
-    }
+  .masthead-brand {
+    float: left;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-size: 16px;
+    font-weight: bold;
+  }
+
+  .region-header-right {
+    float: right;
+    margin: 20px 0 40px 0;
   }
 }
